album art vaguely

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
   <body>
     hayyyy<br>
     <button id="switch">switcheroo</button><br>
+    <button id="stop">stoperoo</button><br>
     <div id="albums"></div>
+    <div id="albumart"></div>
     <script src="../static/mycode.js"></script>
   </body>
 </html>
