IMG CHANGE WORKSSSS -insert light yagami laughter-

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <button id="switch">switcheroo</button><br>
     <button id="stop">stoperoo</button><br>
     <div id="albums"></div>
+    <img src="https://media.giphy.com/media/d2YZa5B3lEAH1soo/giphy.gif" id="art"></img>
     <div id="albumart"></div>
     <script src="../static/mycode.js"></script>
   </body>
