searching and lyrics

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,17 @@
     hayyyy<br>
     <button id="switch">switcheroo</button><br>
     <button id="stop">stoperoo</button><br>
+    
+    
+    <input type="text" id="toSearch" placeholder="Find lyrics!"></input>
+    <button type="submit" id="search">search lyrics</button><br>
+    
     <div id="albums"></div>
     <img src="https://media.giphy.com/media/d2YZa5B3lEAH1soo/giphy.gif" id="art"></img>
-    <div id="albumart"></div>
+    <p id="albumInfo">
+      
+    </p>
+    <p id="lyrics"></p>
     <script src="../static/mycode.js"></script>
   </body>
 </html>
