--- a/templates/indexboot2.html
+++ b/templates/indexboot2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Tune Search</title>
+  <title>PlayLyrics</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,27 +10,39 @@
 </head>
 <body>
   
-  <div class="jumbotron">
-    <h1>hayyyy</h1>
+  <div class="jumbotron" style="padding:20px; text-align:center;">
+    <h1>PlayLyrics</h1>
     <p>Find the lyrics to a song or discover new music.</p>
   </div>
 
-<div class="container">
-    <button id="switch" type="button" class="btn btn-default btn-sm">switcheroo</button><br><br>
-    <button id="stop" type="button" class="btn btn-default btn-sm">stoperoo</button><br><br>
-    
-    
-    <input type="text" name="searchKey" placeholder="Find lyrics!"></input>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+	
+
+	<img src="https://media.giphy.com/media/d2YZa5B3lEAH1soo/giphy.gif" height="400" width="400" id="art" style="display: block; margin-left: auto; margin-right: auto;  border-radius: 25px;"></img>
+	<p id="albumInfo" style="text-align:center; font-size:150%;">Newest album releases</p>
+
+      </div>
+      <div class="col-md-6">
+	 <input type="text" id="searchKey" placeholder="Find lyrics!"></input>
     <button id="search" type="button" class="btn btn-default btn-sm">search lyrics</button><br><br>
+	<p id="lyrics"></p>
+      </div>
+    </div>
+    </div>
+    <!--<button id="switch" type="button" class="btn btn-default btn-sm">switcheroo</button><br><br>
+    <!--<button id="stop" type="button" class="btn btn-default btn-sm">stoperoo</button><br><br>-->
+    
+    
+   
     
     
     
     <div id="albums"></div>
-    <img src="https://media.giphy.com/media/d2YZa5B3lEAH1soo/giphy.gif" id="art"></img>
-    <p id="albumInfo">
-      
-    </p>
-    <p id="lyrics"></p>
+    
+  
+    
     <script src="../static/mycode.js"></script>      
 </div>
 
