changes and documentation

--- a/templates/indexboot2.html
+++ b/templates/indexboot2.html
@@ -21,11 +21,11 @@
 	
 
 	<img src="https://media.giphy.com/media/d2YZa5B3lEAH1soo/giphy.gif" height="400" width="400" id="art" style="display: block; margin-left: auto; margin-right: auto;  border-radius: 25px;"></img>
-	<p id="albumInfo" style="text-align:center; font-size:150%;">Newest album releases</p>
+	<p id="albumInfo" style="text-align:center; font-size:150%;">Loading newest album releases...</p>
 
       </div>
       <div class="col-md-6">
-	 <input type="text" id="searchKey" placeholder="Find lyrics!"></input>
+	 <input type="text" id="searchKey" placeholder="Song Name"></input>
     <button id="search" type="button" class="btn btn-default btn-sm">search lyrics</button><br><br>
 	<p id="lyrics"></p>
       </div>
